--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,4 +2,5 @@ overrides:
   esbuild@<=0.24.2: '>=0.25.0'
   js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
   next-auth@>=5.0.0-beta.0 <5.0.0-beta.30: '>=5.0.0-beta.30'
+  next@>=15.5.0-canary.0 <15.5.7: '>=15.5.7'
   nodemailer@<7.0.7: '>=7.0.7'
